<resources>
    <string name="app_name">LinCal</string>
    <string name="action_settings">Settings</string>
    <string name="today">Today</string>
    <string name="history">History</string>
    <string name="insights">Insights</string>
    <string name="tasks">Tasks</string>
    <string name="title_activity_add_task">New Task</string>
    <string name="save">Save</string>
    <string name="name">Name</string>
    <string name="icon">Icon</string>
    <string name="color">Color</string>
    <string name="reminder_time">Reminder Time</string>
    <string name="reminder_dow">Reminder Days-of-Week</string>
    <string name="reminder_unless">(Unless I\'ve done</string>
    <string name="dont_show_after">(Don\'t show after</string>
    <string name="minutes_of_it">minutes of it.)</string>
    <string name="productivity_rating">Productivity Rating</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="archive">Archive</string>
    <string name="delete_task_title">Delete Task</string>
    <string name="delete_task_msg">Are you sure you wish to delete this task? This will also delete the associated history and todos.</string>
    <string name="no">No</string>
    <string name="todo">Todo</string>
    <string name="show_archived">Show archived</string>
    <string name="unarchive">Unarchive</string>
    <string name="edit_task">Edit Task</string>
    <string name="short_sample">Sample text</string>
    <string name="mark_all_done">Mark all done</string>
    <string name="show_completed">Show completed</string>
    <string name="title_activity_add_todo">Add New Todo</string>
    <string name="title">Title</string>
    <string name="todo_title">Todo Title</string>
    <string name="due_date">Due Date</string>
    <string name="importance">Importance</string>
    <string name="parent_task">Parent Task</string>
    <string name="choose_assoc_task">Choose Associated Task</string>
    <string name="set">Set</string>
    <string name="cancel">Cancel</string>
    <string name="mark_done">Mark done</string>
    <string name="mark_n_as_done">Mark %d todos as done?</string>
    <string name="marked_as_complete">All visible tasks marked as complete.</string>
    <string name="add_task_first">Add a task (category) before creating todos.</string>
    <string name="start_timer">Start timer</string>
    <string name="start_pomodoro">Start pomodoro</string>
    <string name="due_when">Due %s</string>
    <string name="nothing_todo_today">Nothing for you to do today</string>
    <string name="reminder_count">%1$d/%2$d reminders complete</string>
    <string name="todo_count">%1$d/%2$d todos complete</string>
    <string name="timed_with_timer">Timed with Mai-tai</string>
    <string name="worked_on_todo">Worked on todo `%s`</string>
    <string name="edit_note">Edit note</string>
    <string name="save_note">Save note</string>
    <string name="describe_what_you_did">Describe what did during this time</string>
    <string name="no_share_app">No sharing app installed.</string>
</resources>
