<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.inipage.lincal.AddTaskActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:id="@+id/app_bar_layout"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <ScrollView
        android:layout_below="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/content_add_task"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:orientation="vertical">
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/new_task_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/name" />
            </android.support.design.widget.TextInputLayout>

            <TextView
                android:gravity="left"
                android:text="@string/icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/new_task_icon_picker"
                android:layout_width="match_parent"
                android:layout_height="48dp" />

            <TextView
                android:gravity="left"
                android:text="@string/color"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/new_task_color_picker"
                android:layout_width="match_parent"
                android:layout_height="48dp" />

            <Button
                android:id="@+id/add_customer"
                android:text="Add customer"
                android:gravity="center"
                android:layout_margin="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <CheckBox
                android:id="@+id/enable_reminder"
                android:text="Enable reminder"
                android:layout_gravity="center_horizontal"
                android:layout_margin="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                
                <TextView
                    android:text="@string/reminder_time"
                    android:layout_weight="1"
                    android:layout_gravity="center_vertical"
                    android:gravity="left|center_vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <Button
                    android:id="@+id/reminder_time"
                    android:layout_gravity="center"
                    android:text="12:00 PM"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <Button
                android:id="@+id/reminder_dow"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="Mo Tu We Th Fr"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:weightSum="3"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:text="@string/dont_show_after"
                    android:layout_weight="2"
                    android:layout_gravity="center_vertical"
                    android:gravity="left|center_vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <LinearLayout
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <NumberPicker
                        android:id="@+id/count_picker"
                        android:layout_weight="1"
                        android:layout_width="match_parent"
                        android:layout_height="64dp" />

                    <TextView
                        android:text="@string/minutes_of_it"
                        android:layout_weight="1"
                        android:layout_gravity="center_vertical"
                        android:gravity="right|center_vertical"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
